--- a/style.css
+++ b/style.css
@@ -1,41 +1,53 @@
-body
-{
-text-align: center;
-background:#5c2f97;
+body {
+  text-align: center;
+  background: #5c2f97;
 }
-a{
-    color:rgb(202, 218, 57);
+.navigation{
+ background-color: rgb(34, 53, 19);
+ padding: 15px;
+ border:2px solid rgb(195, 233, 26);
+ border-radius: 15px;
+
 }
-h1{
-    text-shadow: 2px 2px rgb(212, 143, 233);
-    color:rgb(42, 102, 192);
+.navigation__link  {
+  background-color:rgb(3, 24, 51) ;
+  color:rgb(206, 238, 26);
+  display: inline;
+  padding: 10px 30px;
+  border-radius: 5px;
+  border:1px solid rgb(197, 197, 4);
+ 
+  text-decoration: none;
+  
+  
 }
-section
-{
-color:rgb(0, 255, 221);
+h1 {
+  text-shadow: 2px 2px rgb(212, 143, 233);
+  color: rgb(42, 102, 192);
 }
-p
-{
-color:rgb(255, 255, 255);
-font-size: 20px;
+section {
+  color: rgb(0, 255, 221);
 }
-.yellow-h
-{
-color:rgb(181, 184, 31);
+p {
+  color: rgb(255, 255, 255);
+  font-size: 20px;
 }
-.head-brown{
-    background-color:rgb(133, 72, 37);
-    padding: 15px;
+.yellow-h {
+  color: rgb(181, 184, 31);
 }
-header a{
-    color: rgb(223, 202, 208);
-    font-size:20px;
-    font-style: italic;
+.head-brown {
+  background-color: rgb(133, 72, 37);
+  padding: 15px;
 }
-#notatki{
-    background-color:rgb(133, 72, 37);
-    
-}.main{
-    max-width: 1000px;
-    margin: 0 auto;
+header a {
+  color: rgb(223, 202, 208);
+  font-size: 20px;
+  font-style: italic;
+}
+#notatki {
+  background-color: rgb(133, 72, 37);
+}
+.main {
+  max-width: 1000px;
+  margin: 0 auto;
 }
