--- a/style.css
+++ b/style.css
@@ -2,25 +2,30 @@ body {
   text-align: center;
   background: #5c2f97;
 }
-.navigation{
- background-color: rgb(34, 53, 19);
- padding: 15px;
- border:2px solid rgb(195, 233, 26);
- border-radius: 15px;
-
+.main {
+  max-width: 1000px;
+  margin: 0 auto;
 }
-.navigation__link  {
-  background-color:rgb(3, 24, 51) ;
-  color:rgb(206, 238, 26);
+.navigation {
+  background-color: rgb(34, 53, 19);
+  padding: 15px;
+  border: 2px solid rgb(195, 233, 26);
+  border-radius: 15px;
+}
+.navigation__link {
+  background-color: rgb(3, 24, 51);
+  color: rgb(206, 238, 26);
   display: inline;
   padding: 10px 30px;
   border-radius: 5px;
-  border:1px solid rgb(197, 197, 4);
- 
+  border: 1px solid rgb(197, 197, 4);
   text-decoration: none;
-  
-  
 }
+.navigation__link--maker {
+  background-color: rgb(0, 85, 35);
+  color: rgb(148, 168, 31);
+}
+
 h1 {
   text-shadow: 2px 2px rgb(212, 143, 233);
   color: rgb(42, 102, 192);
@@ -47,7 +52,7 @@ header a {
 #notatki {
   background-color: rgb(133, 72, 37);
 }
-.main {
-  max-width: 1000px;
-  margin: 0 auto;
+.footer{
+  font-size: 5px;
+  color:Black;
 }
