--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   text-align: center;
-  background: #5c2f97;
+  background: #290e4d;
 }
 .main {
   max-width: 1000px;
@@ -11,6 +11,7 @@ body {
   padding: 15px;
   border: 2px solid rgb(195, 233, 26);
   border-radius: 15px;
+  margin: 10px;
 }
 .navigation__link {
   background-color: rgb(3, 24, 51);
@@ -27,8 +28,16 @@ body {
 }
 
 h1 {
-  text-shadow: 2px 2px rgb(212, 143, 233);
-  color: rgb(42, 102, 192);
+  color: rgb(55, 91, 146);
+  margin: 0px;
+}
+
+h2 {
+  background-color: rgb(49, 90, 121);
+  width:800px;
+  padding: 15px;
+  margin: 0px;
+
 }
 section {
   color: rgb(0, 255, 221);
@@ -41,18 +50,16 @@ p {
   color: rgb(181, 184, 31);
 }
 .head-brown {
-  background-color: rgb(133, 72, 37);
+  background-color: rgb(15, 1, 29);
   padding: 15px;
 }
 header a {
   color: rgb(223, 202, 208);
   font-size: 20px;
   font-style: italic;
+  margin; 10px;
 }
-#notatki {
-  background-color: rgb(133, 72, 37);
-}
-.footer{
+.footer {
   font-size: 5px;
-  color:Black;
+  color: Black;
 }
