--- a/style.css
+++ b/style.css
@@ -1,23 +1,48 @@
 body {
   text-align: center;
-  background: #290e4d;
+  background: #f5f5f8;
+}
+.box {
+  background-color: rgb(49, 90, 121);
+  width: 49%;
+  height: 355.906px;
+  display: inline-block;
+  float: left;
+  margin: 5px;
+}
+.box_second {
+  background: rgb(13, 53, 112);
+  width: 70px;
+  height: 30px;
+  border: ridge 1px rgb(229, 229, 235);
+  color: white;
+  display: inline-block;
+  margin: 5px;
+  float: left;
+  text-decoration: none;
+  
   
 }
-.box{
-  background-color: rgb(49, 90, 121);
-  width:800px;
-  padding: 15px;
-  margin-top: 0px;
-  margin: auto;
+.box_img {
+  width: 50%;
+  height: 300px;
+  display: inline-block;
+  float: left;
 }
-.main {
-  max-width: 1000px;
-  margin: 0 auto;
+.box_gitk{
+width: 50%;
+border-radius: 3px;
+background: rgb(67, 190, 9);
+}
+.box_gitk--save{
+  width: 50%;
+  border-radius: 4px;
+  background-color: rgb(196, 85, 107);
 }
 .navigation {
-  background-color: rgb(34, 53, 19);
+  background-color: rgb(63, 62, 153);
   padding: 15px;
-  border: 2px solid rgb(195, 233, 26);
+  border: 2px solid rgb(250, 250, 250);
   border-radius: 15px;
   margin: 10px;
 }
@@ -34,20 +59,20 @@ body {
   background-color: rgb(0, 85, 35);
   color: rgb(148, 168, 31);
 }
-
+a{
+  color: rgb(245, 239, 239);
+  text-decoration: none;
+}
 h1 {
   color: rgb(55, 91, 146);
   margin: 0px;
 }
 
-h2 {
- 
-}
-section {
+h2 section {
   color: rgb(0, 255, 221);
 }
 p {
-  color: rgb(255, 255, 255);
+  color: rgb(32, 7, 7);
   font-size: 20px;
 }
 .yellow-h {
@@ -61,7 +86,18 @@ header a {
   color: rgb(223, 202, 208);
   font-size: 20px;
   font-style: italic;
-  margin; 10px;
+  margin: 10px;
+}
+
+ul{
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  padding:40px;
+  text-align: left;
+}
+.git_border
+{
+  padding: 3px;
+  border-style:solid;
 }
 .footer {
   font-size: 5px;
