--- a/style_zyciewpudelku.css
+++ b/style_zyciewpudelku.css
@@ -1,17 +1,131 @@
-.display{
-    background-color: lawngreen;
-    padding: 10px;
-    margin: 3px;
-}
-.display__inline{
-    background-color: lightcoral;
-    display: inline;
-    padding:10px;
-}
-.display__inline--block{
-    background-color: rgb(21, 15, 102);
-    display: inline-block;
-    padding:10px;
-    width: 100px;
-    height: 100px;
-}
+                                                                                                                                .display {
+                                                                                                                            background-color: lawngreen;
+                                                                                                                            padding: 10px;
+                                                                                                                            margin: 3px;
+                                                                                                                        }
+                                                                                                                        
+                                                                                                                        .display__inline {
+                                                                                                                            background-color: lightcoral;
+                                                                                                                            display: inline;
+                                                                                                                            padding: 10px;
+                                                                                                                        }
+                                                                                                                        
+                                                                                                                        .display__inline--block {
+                                                                                                                            background-color: rgb(21, 15, 102);
+                                                                                                                            display: inline-block;
+                                                                                                                            padding: 10px;
+                                                                                                                            width: 100px;
+                                                                                                                            height: 100px;
+                                                                                                                        }
+                                                                                                                        
+                                                                                                                        .overflow {
+                                                                                                                            background-color: olivedrab;
+                                                                                                                            overflow: hidden;
+                                                                                                                            display: inline;
+                                                                                                                        }
+                                                                                                                        
+                                                                                                                        .overflow__size {
+                                                                                                                            background: olivedrab;
+                                                                                                                            display: inline-block;
+                                                                                                                            overflow: hidden;
+                                                                                                                            width: 100px;
+                                                                                                                            height: 100px;
+                                                                                                                        }
+                                                                                                                        
+                                                                                                                        .overflow__size--one {
+                                                                                                                            background: rgb(116, 128, 92);
+                                                                                                                            overflow: hidden;
+                                                                                                                            width: 70px;
+                                                                                                                            height: 200px;
+                                                                                                                        }
+                                                                                                                        
+                                                                                                                        .overflow__size--two {
+                                                                                                                            background: rgb(109, 114, 100);
+                                                                                                                            overflow: visible;
+                                                                                                                            width: 70px;
+                                                                                                                            height: 200px;
+                                                                                                                        }
+                                                                                                                        
+                                                                                                                        .overflow__size--three {
+                                                                                                                            background: rgb(109, 114, 100);
+                                                                                                                            overflow: auto;
+                                                                                                                            width: 70px;
+                                                                                                                            height: 60px;
+                                                                                                                        }
+                                                                                                                        
+                                                                                                                        .unit {
+                                                                                                                            background: rgb(39, 108, 129);
+                                                                                                                            width: 1000px;
+                                                                                                                            height: 500px;
+                                                                                                                        }
+                                                                                                                        
+                                                                                                                        .unit__percent {
+                                                                                                                            background: rgb(105, 116, 119);
+                                                                                                                            width: 50%;
+                                                                                                                            height: 50%;
+                                                                                                                        }
+                                                                                                                        
+                                                                                                                        .unit__body {
+                                                                                                                            background: rgb(102, 15, 15);
+                                                                                                                            width: 100vw;
+                                                                                                                            height: 100px;
+                                                                                                                        }
+                                                                                                                        
+                                                                                                                        .position {
+                                                                                                                            position: relative;
+                                                                                                                            width: 400px;
+                                                                                                                            height: 400px;
+                                                                                                                            background: rgb(78, 17, 156);
+                                                                                                                        }
+                                                                                                                        
+                                                                                                                        .position__absolute {
+                                                                                                                            position: absolute;
+                                                                                                                            width: 150px;
+                                                                                                                            height: 150px;
+                                                                                                                            background: rgb(26, 46, 161);
+                                                                                                                            top: 50px;
+                                                                                                                            right: 200px;
+                                                                                                                        }
+                                                                                                                        
+                                                                                                                        .position__absolutetwo {
+                                                                                                                            position: absolute;
+                                                                                                                            width: 150px;
+                                                                                                                            height: 150px;
+                                                                                                                            background: rgb(26, 46, 161);
+                                                                                                                            top: 50px;
+                                                                                                                            right: 10px;
+                                                                                                                            .position__zindex {
+                                                                                                                                position: absolute;
+                                                                                                                                width: 150px;
+                                                                                                                                height: 150px;
+                                                                                                                                background: rgb(18, 117, 121);
+                                                                                                                                top: 50px;
+                                                                                                                                right: 200px;
+                                                                                                                                z-index: 1000;
+                                                                                                                            }
+                                                                                                                            .position__zindextwo {
+                                                                                                                                position: absolute;
+                                                                                                                                width: 150px;
+                                                                                                                                height: 150px;
+                                                                                                                                background: rgb(241, 245, 25);
+                                                                                                                                top: 70px;
+                                                                                                                                right: 180px;
+                                                                                                                                z-index: 1500;
+                                                                                                                            }
+                                                                                                                            .position__fixed {
+                                                                                                                                position: fixed;
+                                                                                                                                width: 100px;
+                                                                                                                                height: 100px;
+                                                                                                                                background: rgb(136, 23, 158);
+                                                                                                                                top: 70px;
+                                                                                                                                right: 180px;
+                                                                                                                                z-index: 1500;
+                                                                                                                            }
+                                                                                                                            .position__sticky {
+                                                                                                                                position: sticky;
+                                                                                                                                width: 100px;
+                                                                                                                                height: 100px;
+                                                                                                                                background: rgb(16, 104, 110);
+                                                                                                                                top: 0px;
+                                                                                                                                right: 50px;
+                                                                                                                                z-index: 1500;
