--- a/style.css
+++ b/style.css
@@ -1,102 +1,133 @@
 body {
-  text-align: center;
-  background: #f5f5f8;
+    text-align: center;
+    background: #f5f5f8;
 }
-.box {
-  background-color: rgb(49, 90, 121);
-  width: 49%;
-  height: 355.906px;
-  display: inline-block;
-  float: left;
-  margin: 5px;
+
+.box_second--box {
+    display: flex;
+    border: ridge 1px rgb(229, 229, 235);
+    color: white;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
 }
-.box_second { 
-  background: rgb(13, 53, 112);
-  width: 70px;
-  height: 30px;
-  border: ridge 1px rgb(229, 229, 235);
-  color: white;
-  display: inline-block;
-  margin: 5px;
-  float: left;
-  text-decoration: none;
+
+.box_second {
+    background: rgb(13, 53, 112);
+    border: ridge 1px rgb(229, 229, 235);
+    color: white;
+    width: 100px;
+    height: 40px;
+    margin: 3px;
+    padding: 3px;
+    text-align: center;
 }
-.box_img {
-  width: 50%;
-  height: 300px;
-  display: inline-block;
-  float: left;
+
+.box_imgone {
+    width: 50%;
+    height: 300px;
+    display: inline-block;
+    float: left;
 }
+
 .box_gitk {
-  width: 50%;
-  border-radius: 3px;
-  background: rgb(67, 190, 9);
+    width: 50%;
+    border-radius: 3px;
+    background: rgb(67, 190, 9);
 }
+
 .box_gitk--save {
-  width: 50%;
-  border-radius: 4px;
-  background-color: rgb(196, 85, 107);
+    width: 50%;
+    border-radius: 4px;
+    background-color: rgb(196, 85, 107);
 }
+
 .navigation {
-  background-color: rgb(63, 62, 153);
-  padding: 15px;
-  border: 2px solid rgb(250, 250, 250);
-  border-radius: 15px;
-  margin: 10px;
+    background-color: rgb(63, 62, 153);
+    padding: 15px;
+    border: 2px solid rgb(250, 250, 250);
+    border-radius: 15px;
+    margin: 10px;
 }
+
 .navigation__link {
-  background-color: rgb(3, 24, 51);
-  color: rgb(206, 238, 26);
-  display: inline;
-  padding: 10px 30px;
-  border-radius: 5px;
-  border: 1px solid rgb(197, 197, 4);
-  text-decoration: none;
+    background-color: rgb(3, 24, 51);
+    color: rgb(206, 238, 26);
+    display: inline;
+    padding: 10px 30px;
+    border-radius: 5px;
+    border: 1px solid rgb(197, 197, 4);
+    text-decoration: none;
 }
+
 .navigation__link--maker {
-  background-color: rgb(0, 85, 35);
-  color: rgb(148, 168, 31);
+    background-color: rgb(0, 85, 35);
+    color: rgb(148, 168, 31);
 }
+
 a {
-  color: rgb(245, 239, 239);
-  text-decoration: none;
+    color: rgb(245, 239, 239);
+    text-decoration: none;
 }
+
 h1 {
-  color: rgb(55, 91, 146);
-  margin: 0px;
+    color: rgba(7, 41, 63, 0.959);
+    margin: 10px;
 }
 
 h2 section {
-  color: rgb(0, 255, 221);
+    color: rgb(0, 255, 221);
 }
+
 p {
-  color: rgb(32, 7, 7);
-  font-size: 20px;
+    color: rgb(32, 7, 7);
+    font-size: 20px;
 }
+
 .yellow-h {
-  color: rgb(181, 184, 31);
+    color: rgb(181, 184, 31);
 }
+
 .head-brown {
-  background-color: rgb(15, 1, 29);
-  padding: 15px;
+    background-color: rgb(15, 1, 29);
+    padding: 15px;
 }
+
+.content {
+    grid-area: tekst;
+    background-color: rgb(49, 90, 121);
+}
+
+.word {
+    grid-area: word;
+    background-color: rgb(49, 90, 121);
+}
+
 header a {
-  color: rgb(223, 202, 208);
-  font-size: 20px;
-  font-style: italic;
-  margin: 10px;
+    color: rgb(223, 202, 208);
+    font-size: 20px;
+    font-style: italic;
+    margin: 10px;
 }
 
 ul {
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  padding: 40px;
-  text-align: left;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    padding: 40px;
+    text-align: left;
 }
+
 .git_border {
-  padding: 3px;
-  border-style: solid;
+    padding: 3px;
+    border-style: solid;
 }
+
 .footer {
-  font-size: 5px;
-  color: Black;
+    font-size: 5px;
+    color: Black;
+}
+
+@media screen and (max-width: 400px) {
+    body {
+        background-color: green;
+    }
 }
