--- a/style.css
+++ b/style.css
@@ -1,6 +1,17 @@
+html {
+    box-sizing: border-box;
+}
+
+*,
+*:after,
+*:before {
+    box-sizing: inherit;
+}
+
 body {
     text-align: center;
     background: #f5f5f8;
+    width: 100%;
 }
 
 .box_second--box {
@@ -27,13 +38,12 @@ body {
     width: 50%;
     height: 300px;
     display: inline-block;
-    float: left;
 }
 
 .box_gitk {
     width: 50%;
     border-radius: 3px;
-    background: rgb(67, 190, 9);
+    background: rgb(148, 202, 123);
 }
 
 .box_gitk--save {
@@ -42,12 +52,49 @@ body {
     background-color: rgb(196, 85, 107);
 }
 
+.grid {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(3, 200px);
+    grid-gap: 15px;
+}
+
+.grid__item {
+    background-color: crimson;
+}
+
+.head-grid--index {
+    grid-area: head;
+    background-color: rgb(244, 250, 246);
+    margin: 20px;
+}
+
+.news-grid {
+    grid-area: news;
+    background-color: rgb(14, 99, 42);
+    border-radius: 14px;
+}
+
+.content-grid {
+    grid-area: conten;
+    background-color: rgb(14, 99, 42);
+    border-radius: 14px;
+}
+
+.footer-grid {
+    grid-area: footer;
+    background-color: rgb(112, 80, 80);
+    border-radius: 14px;
+    border: 1px solid rgb(0, 5, 5);
+}
+
 .navigation {
     background-color: rgb(63, 62, 153);
     padding: 15px;
     border: 2px solid rgb(250, 250, 250);
     border-radius: 15px;
     margin: 10px;
+    display: none;
 }
 
 .navigation__link {
@@ -63,6 +110,13 @@ body {
 .navigation__link--maker {
     background-color: rgb(0, 85, 35);
     color: rgb(148, 168, 31);
+}
+
+.words {
+    background-color: rgb(63, 62, 153);
+    padding: 15px;
+    border: 2px solid rgb(250, 250, 250);
+    border-radius: 15px;
 }
 
 a {
@@ -103,6 +157,31 @@ p {
     background-color: rgb(49, 90, 121);
 }
 
+main {
+    margin: 60px auto;
+}
+
+.hamburger {
+    position: absolute;
+    right: 10px;
+}
+
+.navigation--open {
+    display: block;
+}
+
+.header_one {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    min-height: 50px;
+    background-color: burlywood;
+}
+
+.header_two {
+    margin: 10px;
+}
+
 header a {
     color: rgb(223, 202, 208);
     font-size: 20px;
@@ -126,8 +205,41 @@ ul {
     color: Black;
 }
 
-@media screen and (max-width: 400px) {
+.jstyle_link {
+    color: black;
+}
+
+.jstyle {
+    background: rgb(245, 222, 22);
+    border-radius: 50px;
+    width: 100px;
+    height: 40px;
+    margin: 3px;
+    padding: 3px;
+    text-align: center;
+}
+
+.klasa-z-js {
+    background-color: brown;
+}
+
+@media screen and (min-width: 769px) {
     body {
-        background-color: green;
+        max-width: 100vw;
+    }
+    .grid-one {
+        display: grid;
+        grid-template-areas: 'head head' 'news conten' 'footer footer';
+        grid-template-columns: 1fr 200px;
+        grid-template-rows: 1fr 4fr 50px;
+        grid-gap: 2px;
     }
 }
+
+@media screen and (max-width: 458px) {
+    .navigation__link {
+        display: block;
+    }
+}
+
+@media screen and (min-width: 458px) {}
